--- a/gsoc.html
+++ b/gsoc.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="css/main.css">
-    <link rel="icon" type="image/x-icon" href="assets/movr_square_img.jpg">
+    <link rel="icon" type="image/png" href="assets/movr_logo_clean_nobackground.png">
     
     <style>
         .hero-gsoc {
