cta for data-dictionary-viewer

--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
                 </nav>
                 
                 <div class="header-actions">
+                    <a href="data-dictionary-viewer/data_dictionary_viewer.html" class="btn btn-outline" style="font-size:0.95em; padding: 0.4em 0.9em;">📖 Data Dictionary</a>
                     <a href="https://www.mda.org/science/movr" class="btn btn-outline" target="_blank">Official MDA MOVR ↗</a>
                     <a href="mailto:mdamovr@mdausa.org" class="btn btn-outline">Contact Team</a>
                     <button class="mobile-menu-toggle">☰</button>
