updated data_dictionary_viewer to clearly label alpha testing state and scope

--- a/data-dictionary-viewer/data_dictionary_viewer.html
+++ b/data-dictionary-viewer/data_dictionary_viewer.html
@@ -381,7 +381,7 @@
                 <a href="index.html" style="color: #2c5aa0; text-decoration: none; margin-right: 20px; font-weight: 500; padding: 8px 16px; border-radius: 4px; border: 1px solid #2c5aa0;">Home</a>
             </div>
             <h1>MDA MOVR Data Dictionary</h1>
-            <p>Medical Advisory Review - Case Report Forms</p>
+            <p>Alpha Testing - for reviewing priorities in data dictionary fields and structure</p>
             
             <div class="stats" id="stats">
                 <div class="stat-item">
