--- a/pilot/power-automate.html
+++ b/pilot/power-automate.html
@@ -218,7 +218,7 @@ function submitForm(e) {
   data.userAgent = navigator.userAgent;
   data.referrer = document.referrer;
 
-  const flowURL = 'YOUR_POWER_AUTOMATE_HTTP_TRIGGER_URL_HERE';
+  const flowURL = 'https://default69c088185c17449a9790b60a3c7e52.22.environment.api.powerplatform.com:443/powerautomate/automations/direct/workflows/03bd50749cff45f2bdf7c90d8c070479/triggers/manual/paths/invoke?api-version=1&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=OwjDRaXYA81v0Agvx7HrlcsyJVF0ar0TNNrcrLaUYHY';
   
   // Submit with retry logic
   submitWithRetry(flowURL, data, 3)
