upated index and and stlying content for pilot landing page

--- a/pilot/index.html
+++ b/pilot/index.html
@@ -49,8 +49,8 @@
     <!-- MESSAGE FROM TEAM -->
     <section class="message-from-team">
         <div class="container">
-            <h2>Meet Your MOVR Team</h2>
-            <p class="section-intro">We're excited to lead this pilot with you. When you have questions or need support, we're the team behind <strong><a href="mailto:mdamovr@mdausa.org">mdamovr@mdausa.org</a></strong>—and we're here to help.</p>
+            <h2>A Message from Your MOVR Team</h2>
+            <p class="section-intro">We're leading this pilot to reimagine how families manage neuromuscular disease data. When you need support, we're here at <strong><a href="mailto:mdamovr@mdausa.org">mdamovr@mdausa.org</a></strong>.</p>
 
             <div class="leadership-grid">
                 <!-- Andre's Card -->
@@ -77,7 +77,16 @@
             </div>
 
             <div class="team-footer">
-                <p>We'll track your progress throughout the pilot and ensure your data remains safe, vendors are held accountable, and all study protocols are properly in place to protect participants for this limited pilot. Afterward, we'll give you our recommendation on how to move forward.</p>
+                <p>We believe families deserve better tools to manage complex medical journeys. This pilot tests new approaches designed by the neuromuscular community, for the neuromuscular community. Your participation directly shapes the future of MOVR.</p>
+                
+                <div class="pilot-details">
+                    <p><strong>Who can participate:</strong> Individuals or parents of minors with DMD, SMA, or LGMD</p>
+                    <p><strong>Time commitment:</strong> 6-month pilot, opt out anytime</p>
+                    <p><strong>What you'll gain:</strong> See your medical data visualized, connect with MDA's MOVR team, and accelerate discovery</p>
+                    <p><strong>Your choice:</strong> Test one platform or explore all three to compare experiences</p>
+                </div>
+
+                <p>We'll ensure your data stays safe, vendors are held accountable, and all protocols protect participants. When the pilot ends, we'll share our findings and recommendations for what comes next.</p>
                 <p class="signature">— Andre & Jessica</p>
             </div>
         </div>
@@ -155,17 +164,6 @@
                 <p><strong>Flexibility:</strong> You can withdraw at any time</p>
                 <p><strong>Impact:</strong> Your voice helps shape the future of rare disease research</p>
             </div>
-        </div>
-    </section>
-
-    <!-- WHY JOIN -->
-    <section class="benefits">
-        <div class="container">
-            <h2>Why This Matters</h2>
-            <p><strong>Who can participate:</strong> Individuals or parents of minors with DMD, SMA, or LGMD</p>
-            <p><strong>Time commitment:</strong> 6-month pilot, opt out anytime</p>
-            <p><strong>What you'll gain:</strong> See your medical data visualized, connect with MDA's research team, and accelerate discovery</p>
-            <p><strong>Your choice:</strong> Test one platform or explore all three to compare experiences</p>
         </div>
     </section>
 
