--- a/pilot/index.html
+++ b/pilot/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join the MOVR Pilot | MDA</title>
+    <link rel="icon" type="image/png" href="MOVR-next-gen-LOGO.png">
     <link rel="stylesheet" href="style.css">
     
     <!-- Google Analytics -->
@@ -171,7 +172,7 @@
     <!-- ENROLLMENT FORM -->
     <section id="join" class="enrollment-form">
         <div class="container">
-            <h2>Join the MOVR Pilot</h2>
+            <h2>Join the MOVR 2.0 Pilot</h2>
 
             <div class="form-warning-box">
                 <p><strong>⚠️ Enrollment is limited — First-come, first-served</strong></p>
