updated documentation - most importantly updated form MDA event to MDA call for howHeard

--- a/pilot/power-automate.html
+++ b/pilot/power-automate.html
@@ -51,7 +51,7 @@
          <option value="">Select an option</option>
          <option value="Email">MDA Email</option>
          <option value="Social">Social Media</option>
-         <option value="Event">MDA Event</option>
+         <option value="Call">MDA Call</option>
          <option value="Provider">Healthcare Provider</option>
          <option value="Friend">Friend/Family</option>
          <option value="Other">Other</option>
