updated numbers to reflect accurate counts

--- a/gsoc.html
+++ b/gsoc.html
@@ -726,16 +726,69 @@ movr.plot_progression(progression, save='my_analysis.png')
             </div>
             
             <div style="text-align: center; margin-top: var(--spacing-xl);">
-                <div class="alert alert-info" style="display: inline-block; max-width: 700px;">
-                    <h2>Ready to Apply?</h2>
-                    <p style="margin-bottom: 1rem;">Applications open through the official Google Summer of Code website. Connect with our mentors first to discuss your project proposal.</p>
-                    <div class="btn-group" style="margin-top: var(--spacing-md);">
-                        <a href="https://summerofcode.withgoogle.com/" class="btn btn-primary" target="_blank" style="background: #4285f4; border-color: #4285f4;">Apply on GSoC Website →</a>
-                        <a href="mailto:mdamovr@mdausa.org?subject=GSoC%202026%20Interest" class="btn btn-outline">Contact Mentors</a>
-                        <a href="https://github.com/openmovr" class="btn btn-outline" target="_blank">View GitHub</a>
+                <div style="background: linear-gradient(135deg, #4285f4 0%, #34a853 25%, #fbbc04 75%, #ea4335 100%); 
+                            padding: 3px; 
+                            border-radius: 16px; 
+                            display: inline-block; 
+                            max-width: 750px;
+                            box-shadow: 0 8px 24px rgba(66, 133, 244, 0.3);">
+                    <div style="background: white; 
+                                border-radius: 14px; 
+                                padding: 2.5rem 2rem;">
+                        <h3 style="font-size: 2rem; 
+                                   margin-bottom: 1rem; 
+                                   background: linear-gradient(135deg, #4285f4, #ea4335); 
+                                   -webkit-background-clip: text; 
+                                   -webkit-text-fill-color: transparent; 
+                                   background-clip: text;
+                                   font-weight: 700;">
+                            🚀 Ready to Apply?
+                        </h3>
+                        <p style="font-size: 1.05rem; 
+                                  color: #5f6368; 
+                                  margin-bottom: 1.5rem; 
+                                  line-height: 1.6;">
+                            Applications open through the official Google Summer of Code website.<br>
+                            Connect with our mentors first to discuss your project proposal.
+                        </p>
+                        <div class="btn-group" style="margin-top: var(--spacing-md); gap: 0.75rem;">
+                            <a href="https://summerofcode.withgoogle.com/" 
+                               class="btn btn-primary" 
+                               target="_blank" 
+                               style="background: linear-gradient(135deg, #4285f4, #34a853); 
+                                      border: none; 
+                                      font-weight: 700; 
+                                      font-size: 1.05rem;
+                                      padding: 0.9rem 1.8rem;
+                                      box-shadow: 0 4px 12px rgba(66, 133, 244, 0.4);
+                                      transition: all 0.3s ease;">
+                                Apply on GSoC Website →
+                            </a>
+                            <a href="mailto:mdamovr@mdausa.org?subject=GSoC%202026%20Interest" 
+                               class="btn btn-outline" 
+                               style="border: 2px solid #4285f4; 
+                                      color: #4285f4; 
+                                      font-weight: 600;
+                                      padding: 0.9rem 1.8rem;
+                                      transition: all 0.3s ease;">
+                                Contact Mentors
+                            </a>
+                            <a href="https://github.com/openmovr" 
+                               class="btn btn-outline" 
+                               target="_blank"
+                               style="border: 2px solid #34a853; 
+                                      color: #34a853; 
+                                      font-weight: 600;
+                                      padding: 0.9rem 1.8rem;
+                                      transition: all 0.3s ease;">
+                                View GitHub
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
         </div>
     </section>
 
