updated readme and included ADP acknowledgement

--- a/index.html
+++ b/index.html
@@ -276,7 +276,9 @@
             </div>
             
             <div style="border-top: 1px solid rgba(255, 255, 255, 0.2); margin-top: var(--spacing-xl); padding-top: var(--spacing-lg); text-align: center; opacity: 0.8;">
-                <p>&copy; 2025 OpenMOVR Open Science Initiative. Building the future through transparent collaboration.</p>
+                <p>&copy; 2025 OpenMOVR Open Science Initiative</p>
+                <p style="margin-top: 0.5rem; font-size: 0.9rem;">Founded by Andre Daniel Paredes • ADParedes • OpenMOVR Founder & Architect</p>
+                <p style="margin-top: 0.5rem;">Building the future through transparent collaboration</p>
             </div>
         </div>
     </footer>
