removed copy(c) and added achor for vision in banner of home page

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <p style="font-size: 1.2rem; margin: var(--spacing-lg) auto; max-width: 800px; text-align: center;">MOVR is creating <strong>open source initiatives in software</strong> and eventually science — building transparent, community-driven tools that accelerate research and benefit everyone.</p>
                 
                 <div class="btn-group justify-center">
-                    <a href="docs/platform-vision.html" class="btn btn-primary btn-large">Our Vision</a>
+                    <a href="#vision" class="btn btn-primary btn-large">Our Vision</a>
                     <a href="pilot/" class="btn btn-outline btn-large" style="background: var(--mda-gold); color: var(--white); border: none;">Join MOVR 2.0 Pilot</a>
                 </div>
             </div>
@@ -132,7 +132,7 @@
     </section>
 
     <!-- Section 2: Our Vision & Impact -->
-    <section class="section" style="background: linear-gradient(135deg, var(--mda-blue) 0%, var(--mda-purple) 100%); color: var(--white);">
+    <section class="section" id="vision" style="background: linear-gradient(135deg, var(--mda-blue) 0%, var(--mda-purple) 100%); color: var(--white);">
         <div class="container">
             <div class="section-header text-center">
                 <h2 style="color: var(--white);">Building on a Foundation of Trust</h2>
@@ -276,7 +276,7 @@
             </div>
             
             <div style="border-top: 1px solid rgba(255, 255, 255, 0.2); margin-top: var(--spacing-xl); padding-top: var(--spacing-lg); text-align: center; opacity: 0.8;">
-                <p>&copy; 2025 OpenMOVR Open Science Initiative</p>
+                <p>2025 OpenMOVR Open Science Initiative</p>
                 <p style="margin-top: 0.5rem; font-size: 0.9rem;">Founded by Andre Daniel Paredes • ADParedes • OpenMOVR Founder & Architect</p>
                 <p style="margin-top: 0.5rem;">Building the future through transparent collaboration</p>
             </div>
