--- a/gsoc.html
+++ b/gsoc.html
@@ -832,7 +832,9 @@ movr.plot_progression(progression, save='my_analysis.png')
             </div>
             
             <div style="border-top: 1px solid rgba(255, 255, 255, 0.2); margin-top: var(--spacing-xl); padding-top: var(--spacing-lg); text-align: center; opacity: 0.8;">
-                <p>&copy; 2026 OpenMOVR Open Science Initiative. GSoC is a trademark of Google LLC.</p>
+                <p>2025 OpenMOVR Open Science Initiative</p>
+                <p style="margin-top: 0.5rem; font-size: 0.9rem;">Founded by Andre Daniel Paredes • ADParedes • OpenMOVR Founder & Architect</p>
+                <p style="margin-top: 0.5rem;">GSoC is a trademark of Google LLC</p>
             </div>
         </div>
     </footer>
